clock: Fix usage of polkit service to set timezone

There were several issues, caused by changes in the polkit service:
 - some dbus methods were renamed
 - we don't need to pass a path to a timezone file to set it, just the
   name of the timezone

Also we were reading a return value correctly.

https://bugzilla.gnome.org/show_bug.cgi?id=649639